<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_mazesolver</name>
  <version>0.0.0</version>
  <description>
    TODO: Package description
  </description>
  <maintainer email="KurzaCationer@gmail.com">ros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclpy</depend>

  <exec_depend>turtlebot3_cartographer</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>multirobot_map_merge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

